[package]
name = "websocket"
version = "0.1.0"
authors = ["Max Lavrenov <max.lavrenov@optiopay.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-tungstenite = "0.10.1"
tokio = { version = "0.2", features = ["macros", "tcp", "sync", "blocking"] }
log = "0.4.8"
futures = "0.3.4"
tungstenite = "0.10.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.51"
notify = "4.0.15"
structopt = "0.3.13"
simplelog = "0.7.5"
