[package]
name = "cg-local-rs"
version = "0.2.0"
authors = ["Max Lavrenov <max.lavrenov@optiopay.com>"]
edition = "2018"
description = "Backend for CodinGame browser extensions."
license = "MIT"
readme = "README.md"
homepage = "https://github.com/e-max/cg-local-rs"


[dependencies]
tokio-tungstenite = "0.10.1"
tokio = { version = "0.2", features = ["macros", "tcp", "sync", "blocking"] }
log = "0.4.8"
futures = "0.3.4"
tungstenite = "0.10.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.51"
notify = "4.0.15"
structopt = "0.3.13"
simplelog = "0.7.5"
